--- a/src/encrypt/view/DecryptForm.fxml
+++ b/src/encrypt/view/DecryptForm.fxml
@@ -6,9 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="encrypt.controller.DecryptFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="227.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="encrypt.controller.DecryptFormController">
+    <children>
+        <Label fx:id="lblOutput" layoutX="44.0" layoutY="177.0" prefHeight="16.0" prefWidth="491.0" text="Output:" />
+        <Button fx:id="btnConvert" layoutX="501.0" layoutY="109.0" mnemonicParsing="false" onAction="#btnConvert_OnAction" text="Convert" />
+        <TextField fx:id="txtInput" layoutX="44.0" layoutY="27.0" prefHeight="26.0" prefWidth="398.0" />
+        <TextField fx:id="txtKey" layoutX="44.0" layoutY="83.0" prefHeight="26.0" prefWidth="398.0" />
+    </children>
 </AnchorPane>
