--- a/src/encrypt/view/EncryptForm.fxml
+++ b/src/encrypt/view/EncryptForm.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="encrypt.controller.EncryptFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="227.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="encrypt.controller.EncryptFormController">
+   <children>
+      <Label fx:id="lblOutput" layoutX="44.0" layoutY="177.0" prefHeight="16.0" prefWidth="491.0" text="Output:" />
+      <Button fx:id="btnConvert" layoutX="501.0" layoutY="109.0" mnemonicParsing="false" onAction="#btnConvert_OnAction" text="Convert" />
+      <TextField fx:id="txtInput" layoutX="44.0" layoutY="27.0" prefHeight="26.0" prefWidth="398.0" />
+      <TextField fx:id="txtKey" layoutX="44.0" layoutY="83.0" prefHeight="26.0" prefWidth="398.0" />
+   </children>
 </AnchorPane>
