--- a/src/encrypt/view/MainForm.fxml
+++ b/src/encrypt/view/MainForm.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="114.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="encrypt.controller.MainFormController">
+<AnchorPane prefHeight="177.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="encrypt.controller.MainFormController">
    <children>
-      <Button fx:id="btnEncrypt" layoutX="36.0" layoutY="44.0" mnemonicParsing="false" onAction="#btnEncrypt_OnAction" text="Encrypt" />
-      <Button fx:id="btnDecrypt" layoutX="169.0" layoutY="44.0" mnemonicParsing="false" onAction="#btnDecrypt_OnAction" text="Decrypt" />
+      <Button fx:id="btnEncrypt" layoutX="41.0" layoutY="119.0" mnemonicParsing="false" onAction="#btnEncrypt_OnAction" text="Encrypt" />
+      <Button fx:id="btnDecrypt" layoutX="174.0" layoutY="119.0" mnemonicParsing="false" onAction="#btnDecrypt_OnAction" text="Decrypt" />
+      <Label layoutX="40.0" layoutY="30.0" text="Encrypt/Decrypt Demo">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
