--- a/src/encrypt/view/DecryptForm.fxml
+++ b/src/encrypt/view/DecryptForm.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="227.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="encrypt.controller.DecryptFormController">
     <children>
-        <Label fx:id="lblOutput" layoutX="44.0" layoutY="177.0" prefHeight="16.0" prefWidth="491.0" text="Output:" />
-        <Button fx:id="btnConvert" layoutX="501.0" layoutY="109.0" mnemonicParsing="false" onAction="#btnConvert_OnAction" text="Convert" />
-        <TextField fx:id="txtInput" layoutX="44.0" layoutY="27.0" prefHeight="26.0" prefWidth="398.0" />
-        <TextField fx:id="txtKey" layoutX="44.0" layoutY="83.0" prefHeight="26.0" prefWidth="398.0" />
+        <Label layoutX="8.0" layoutY="187.0" prefHeight="16.0" prefWidth="55.0" text="Output:" />
+        <Button fx:id="btnDecrypt" layoutX="498.0" layoutY="145.0" mnemonicParsing="false" onAction="#btnDecrypt_OnAction" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: green; -fx-text-fill: white;" text="Decrypt" />
+        <TextField fx:id="txtInput" layoutX="122.0" layoutY="57.0" prefHeight="26.0" prefWidth="464.0" />
+        <TextField fx:id="txtKey" layoutX="122.0" layoutY="107.0" prefHeight="26.0" prefWidth="464.0" />
+        <TextField fx:id="txtDecryptedText" editable="false" layoutX="69.0" layoutY="182.0" prefHeight="26.0" prefWidth="519.0" />
+        <Label layoutX="265.0" layoutY="14.0" prefHeight="21.0" prefWidth="80.0" text="Decrypt">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label layoutX="8.0" layoutY="62.0" prefHeight="16.0" prefWidth="108.0" text="Text to Convert:" />
+        <Label layoutX="8.0" layoutY="112.0" prefHeight="16.0" prefWidth="36.0" text="Key:" />
     </children>
 </AnchorPane>
